# tape-storage

./: README.md
arduino/ardutape1/: ardutape1.ino
arduino/ardutape2/: ardutape2.ino
arduino/ardutape3/: ardutape3.ino
arduino/diffmanch1/: diffmanch1.ino
arduino/diffmanchread/: diffmanchread.ino
arduino/diffmanchwrite/: diffmanchwrite.ino
ardutape_interface/: Cargo.toml  lorem.txt  tmp
ardutape_interface/src/: args.rs  file.rs  main.rs  serial.rs  thing  ui.rs
preliminary/crctest/: test.py
preliminary/read_esp8266_test1/: read_esp8266_test1.ino
preliminary/simple_tape_write/: simple_tape_write.ino
preliminary/simple_tape_write/simple_tape_write2/: simple_tape_write2.ino
