[package]
name = "ardutape"
version = "0.1.0"
edition = "2021"
description = "ArduTape interface utility"
authors = ["Sergio Carmine 3CITI <me@sergiocarmi.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
serialport = "4.2.0"
colored = "2.0.0"
